src/objects/FAQ__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>sf_FAQArticleTemplate</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Frequently asked questions and their answers.</description>
    <fields>
        <fullName>AAI_Guidelines__c</fullName>
        <label>AA Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AMR_Guidelines__c</fullName>
        <description>Guidelines used for the United States and Canada</description>
        <label>AMR Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>The Answer is the answer to the question.</description>
        <label>Answer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never reviewed by Communications</fullName>
                </value>
                <value>
                    <fullName>Being reviewed by Communications</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Updated by Communications</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Updated by GCR (no Communications)</fullName>
                </value>
                <value>
                    <fullName>Rejected by Communications</fullName>
                </value>
                <value>
                    <fullName>For internal use - Do Not Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Notes__c</fullName>
        <label>Article Notes</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>BR_Guidelines__c</fullName>
        <label>BR Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Europe_Guidelines__c</fullName>
        <label>Europe Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GC_Guidelines__c</fullName>
        <label>GC Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Helpful_Articles__c</fullName>
        <label>Helpful Articles</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Helpful_Links__c</fullName>
        <description>Helpful links for our Customers</description>
        <label>Helpful Links</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IMEA_Guidelines__c</fullName>
        <label>IMEA Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JP_Guidelines__c</fullName>
        <label>JP Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KO_Guidelines__c</fullName>
        <label>KO Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LA_Guidelines__c</fullName>
        <label>LA Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legacy_ArticleNumber__c</fullName>
        <label>Legacy ArticleNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Status__c</fullName>
        <label>Legacy Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKB_Link__c</fullName>
        <formula>$Setup.ContactUsURL__c.URL__c &amp;&quot;/articles/FAQ/&quot;&amp; UrlName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PKB Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pictorial_s__c</fullName>
        <label>Pictorial(s)</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Public_Content_Review__c</fullName>
        <inlineHelpText>Has the article been reviewed for public content?</inlineHelpText>
        <label>Public Content Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <label>FAQ</label>
    <pluralLabel>FAQS</pluralLabel>
</CustomObject>